Plug..fetch_all() replaces Input..fetch_source_all() and Output..fetch_all(): - Input..fetch_source() renamed _fetch()

--- a/examples/index.html
+++ b/examples/index.html
@@ -73,7 +73,7 @@
           // remains valid when disconnected, until a new connected state
           // updates the output
           .$query_selector( '#connection_state' )
-          //.trace( '#connection_state', { fetch_source_rx: true } )
+          //.trace( '#connection_state' )
         )
       ;
       
