examples css: define class span.pipelet, use it in window_size/index.html

--- a/examples/window_size/index.html
+++ b/examples/window_size/index.html
@@ -28,14 +28,14 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-2 center-block">
-        <h2>Test <i>window_size()</i> pipelet</h2>
+        <h2>Pipelet <span class="pipelet">window_size()</span></h2>
         <p>
           Resize your browser window and watch table display size
           reactively.
         </p>
         <p>
-          Displaying is throttled using pipelets <i>throttled()</i> and
-          <i>animation_frames()</i> for smooth display updates.
+          Displaying is throttled using pipelets <span class="pipelet">throttle_last()</span>
+          and <span class="pipelet">animation_frames()</span> for smooth display updates.
         </p>
         
 <pre><code class="javascript">
