site highlighted code: use agate theme

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <link href="css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
     
     <!-- Highlight.js -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/default.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/agate.min.css">
     
     <!-- Socket.io library, delivered by socket.io -->
     <script src="/socket.io/socket.io.js"></script>
