fix browser manual tests

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -12,7 +12,7 @@
     <script src="/test/javascript/mocha_expect-min.js"></script>
     
     <script src="/test/lib/tests_utils.js"   ></script>
-    <script src="/test/lib/clone_tests.js"   ></script>
+    <script src="/test/lib/clone.js"         ></script>
     <script src="/test/lib/value_equals.js"  ></script>
     <script src="/test/lib/object_diff.js"   ></script>
     <script src="/test/lib/lazy_logger.js"   ></script>
@@ -26,6 +26,7 @@
     <script src="/test/lib/RS.js"            ></script>
     <script src="/test/lib/pipelet.js"       ></script>
     <script src="/test/lib/set.js"           ></script>
+
     <script src="/test/lib/store.js"         ></script>
     <script src="/test/lib/unique.js"        ></script>
     <script src="/test/lib/filter.js"        ></script>
@@ -35,7 +36,6 @@
     <script src="/test/lib/json.js"          ></script>
     <script src="/test/lib/transforms.js"    ></script>
     <script src="/test/lib/url.js"           ></script>
-    <script src="/test/lib/query_selector.js"></script>
     
     <script>
       window.onload = function() {
