--- a/examples/teaser/index.html
+++ b/examples/teaser/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     
     <!-- Source Map Support -->
-    <script src="/lib/browser-source-map-support.js.min" type="text/javascript"></script>
+    <script src="/lib/browser-source-map-support.min.js" type="text/javascript"></script>
     <script>sourceMapSupport.install();</script>
     
     <link href="table.css" type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
