Remove RS.add_exports(), name_after_caller_location(): limit default name to the last 3 components of path: - mutate the RS Object directly, sometimes with RS.extend_2( RS, exports {} ); - remove calls to RS.add_exports() in a all modules and debugging trace showing loaded module - update Copyright notices end year - pipelet.js: name_after_caller_location():   - limit default name to the last 3 components of path   - replace path delimitors \\ to / on win32 - test/manual/webrtc.html: fix extend_2 reference

--- a/test/manual/webrtc.html
+++ b/test/manual/webrtc.html
@@ -29,7 +29,7 @@
     <script>
       var RS       = rs.RS
         , extend   = RS.extend
-        , extend_2 = RS.extend_2
+        , extend_2 = RS.extend._2
         , Pipelet  = RS.Pipelet
         , Set      = RS.Set
         , log      = RS.log
