add 7 tests, creating to_uri() test suite

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -40,6 +40,7 @@
     <script src="/test/lib/json.js"          ></script>
     <script src="/test/lib/transforms.js"    ></script>
     <script src="/test/lib/url.js"           ></script>
+    <script src="/test/lib/to_uri.js"        ></script>
     
     <script>
       window.onload = function() {
