Move is_array from code.js to javascript.js, idem for tests

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -16,6 +16,7 @@
     <script src="/test/javascript/mocha_expect-min.js"></script>
     
     <script src="/test/lib/tests_utils.js"   ></script>
+    <script src="/test/lib/javascript.js"    ></script>
     <script src="/test/lib/clone.js"         ></script>
     <script src="/test/lib/value_equals.js"  ></script>
     <script src="/test/lib/object_diff.js"   ></script>
