--- a/site/index.html
+++ b/site/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic|Oswald&subset=latin,latin-ext"/>
     <link href="css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
 
-    <!-- Source Map Support -->
+    <!-- Source Map Support
     <script src="/lib/browser-source-map-support.min.js" type="text/javascript"></script>
     <script>sourceMapSupport.install();</script>
+    -->
     
     <!-- Highlight.js -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/agate.min.css">
