--- a/application_template/www/index.html
+++ b/application_template/www/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>SuperSoignant</title>
+  <title>My Application</title>
   
   <meta name="description"
     content=""
