use "template_application_name" as default application name; code refactoring

--- a/application_template/www/index.html
+++ b/application_template/www/index.html
@@ -12,7 +12,7 @@
     content=""
   />
   
-  <meta name="author" content="My Application">
+  <meta name="author" content="template_application_name">
   
   <!-- favicon -->
   <link rel="icon" href="/img/favicon.png" />
@@ -31,7 +31,7 @@
 
 <body>
   <!-- My Application -->
-  <script src="/lib/app-min.js" type="text/javascript"></script>
+  <script src="/lib/template_application_name-min.js" type="text/javascript"></script>
 </body>
 
 </html>
