--- a/application_template/www/index.html
+++ b/application_template/www/index.html
@@ -18,7 +18,9 @@
   <link rel="icon" href="/img/favicon.png" />
   
   <!-- Application CSS -->
-  <link rel="stylesheet" type="text/css" href="css/main.css" /> <!-- base css style for all web pages -->
+  <link rel="stylesheet" type="text/css" href="css/main.css"      /> <!-- base css style for all web pages -->
+  <link rel="stylesheet" type="text/css" href="css/homepage.css"  /> <!-- css style for home page -->
+  <link rel="stylesheet" type="text/css" href="css/todo-list.css" /> <!-- css style for ToDo list app -->
   
   <!-- Toubkal with Socket.io -->
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
