--- a/application_template/www/index.html
+++ b/application_template/www/index.html
@@ -22,6 +22,10 @@
   <link rel="stylesheet" type="text/css" href="css/homepage.css"  /> <!-- css style for home page -->
   <link rel="stylesheet" type="text/css" href="css/todo-list.css" /> <!-- css style for ToDo list app -->
   
+  <!-- Source Map Support -->
+  <script src="/lib/browser-source-map-support.min.js" type="text/javascript"></script>
+  <script>sourceMapSupport.install();</script>
+  
   <!-- Toubkal with Socket.io -->
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="/lib/toubkal-min.js"     type="text/javascript"></script>
