Cleanup client assets API, using pipelets only: - Pipelet toubkal_min():   - provide options 'socket_io', 'ui', 'bootstrap', 'react', to customize bundles by volumes   - is now a multiton depending on bundle options   - minified name depends on options   - multiton is globaly scoped in rs namespace - Pipelet source_map_support_min(): singleton is globaly scoped in rs namespace - Pipelet build(): singleton is globaly scoped in rs namespace - Update documentation - Modify tests, site, and example applications

--- a/examples/window_size/index.html
+++ b/examples/window_size/index.html
@@ -16,7 +16,7 @@
   
   <link href="/css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
   
-  <script src="/lib/toubkal-min.js"     type="text/javascript"></script>
+  <script src="/lib/toubkal-socket_io-ui-react-min.js" type="text/javascript"></script>
   
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/agate.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
