--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -20,8 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js" type="text/javascript"></script>
   
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-  <script src="/lib/toubkal-min.js"      type="text/javascript"></script> <!-- Toubkal version 0.2.7 -->
-  <script src="/node_modules/toubkal/lib/react/react.js"></script>
+  <script src="/lib/toubkal-socket_io-ui-react-min.js" type="text/javascript"></script>
   
   <title>Chat App</title>
   
