--- a/examples/index.html
+++ b/examples/index.html
@@ -18,8 +18,7 @@
     <script>sourceMapSupport.install();</script>
     
     <script src="/socket.io/socket.io.js"></script>
-    
-    <script src="/lib/toubkal-min.js"></script>
+    <script src="/lib/toubkal-socket_io-ui-react-min.js"></script>
   </head>
   
   <body>
