--- a/examples/next/index.html
+++ b/examples/next/index.html
@@ -12,8 +12,8 @@
   
   <link href="/css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
   
-  <script src="/lib/toubkal-min.js"      type="text/javascript"></script> <!-- Toubkal version 0.2.7 -->
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+  <script src="/lib/toubkal-socket_io-ui-react-min.js" type="text/javascript"></script>
   
   <title>next()</title>
 </head>
