--- a/examples/teaser/index.html
+++ b/examples/teaser/index.html
@@ -12,8 +12,7 @@
     <title>Toubkal - teaser</title>
     
     <script src="/socket.io/socket.io.js"></script>
-    
-    <script src="/lib/toubkal-min.js"></script>
+    <script src="/lib/toubkal-socket_io-ui-react-min.js"></script>
   </head>
   
   <body>
