--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,7 @@
     <script src="/socket.io/socket.io.js"></script>
     
     <!-- Minified Toubkal library, delivered by toubkal server -->
-    <script src="/lib/toubkal-min.js"></script>
+    <script src="/lib/toubkal-socket_io-ui-min.js"></script>
     
     <script>
       var de = 0;
