--- a/test/automated/rs_core.html
+++ b/test/automated/rs_core.html
@@ -5,7 +5,7 @@
     
     <title>Automated Core Tests</title>
     
-    <script src="/lib/toubkal-min.js"></script>
+    <script src="/lib/toubkal-socket_io-ui-bootstrap-min.js" type="text/javascript"></script>
   </head>
   
   <body>
