Passport suit tests: add 3 more tests

--- a/test/automated/rs_passport.html
+++ b/test/automated/rs_passport.html
@@ -10,7 +10,8 @@
   </head>
   
   <body>
-    <div id="social-signin"></div>
+    <div id="sign-in"></div>
+    <div id="profile"></div>
     
     <script src="/test/javascript/init_passport.js" type="text/javascript"></script>
   </body>
